# trinity-shield

./: Cargo.toml  README.md  TrinityShieldVerifierV2.sol
benches/: shield_benchmarks.rs
contracts/: TrinityShieldVerifier.sol  TrinityShieldVerifierV2.sol  deployment-trinity-shield-v1.json
deployment/: production-config.json
docs/: ARCHITECTURE.md  HARDWARE_SETUP_GUIDE.md  LEAN_INTEGRATION.md  SECURITY_AUDIT_REPORT.md  TRINITY_SHIELD_ROADMAP.md  VALIDATOR_ONBOARDING.md
docs/blog/: devto-trinity-shield-deep-dive.md
enclave/: Cargo.toml  trinity_shield.edl
enclave/src/: crypto.rs  dcap.rs  enclave_impl.rs  lib.rs  sealing.rs
gramine/: trinity-shield.manifest.template
scripts/: ipc-client.ts  monitor-attestations.ts  relayer-bridge.ts  validator-setup.sh
src/: config.rs  error.rs  ipc.rs  lib.rs  orchestrator.rs  quantum.rs  types.rs
src/application/: authenticator.rs  authorizer.rs  input_validator.rs  mod.rs  session_manager.rs
src/attestation/: mod.rs
src/consensus/: mod.rs
src/crypto/: hashing.rs  kdf.rs  mod.rs  signing.rs  symmetric.rs
src/data/: integrity.rs  key_manager.rs  mod.rs  sealing.rs
src/perimeter/: ddos_protection.rs  ip_filter.rs  mod.rs  rate_limiter.rs  request_validator.rs
