[package]
name = "trinity-shield"
version = "1.0.0"
edition = "2021"
authors = ["ChronosVault <chronosvault@chronosvault.org>"]
description = "Trinity Shield™ - Layer 8 Hardware Security for Trinity Protocol"
license = "MIT"
repository = "https://github.com/Chronos-Vault/trinity-shield"
keywords = ["tee", "sgx", "security", "blockchain", "consensus"]
categories = ["cryptography", "authentication"]

[features]
default = ["std"]
std = []
sgx = ["sgx_tstd", "sgx_types", "sgx_tcrypto"]
simulation = []  # For testing without real SGX hardware

[dependencies]
# Cryptography
sha2 = { version = "0.10", default-features = false }
sha3 = { version = "0.10", default-features = false }
hmac = { version = "0.12", default-features = false }
aes-gcm = { version = "0.10", default-features = false, features = ["aes"] }
chacha20poly1305 = { version = "0.10", default-features = false }
ed25519-dalek = { version = "2.1", default-features = false, features = ["rand_core"] }
x25519-dalek = { version = "2.0", default-features = false }
k256 = { version = "0.13", default-features = false, features = ["ecdsa"] }
rand_core = { version = "0.6", default-features = false }
getrandom = { version = "0.2", default-features = false }

# Post-Quantum Cryptography (ML-KEM, Dilithium)
pqcrypto-dilithium = { version = "0.5", optional = true }
pqcrypto-kyber = { version = "0.8", optional = true }

# Serialization
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
bincode = { version = "1.3", default-features = false }

# Time handling
chrono = { version = "0.4", default-features = false, features = ["serde"] }

# Error handling
thiserror = "1.0"

# Async runtime (for non-SGX builds)
tokio = { version = "1.35", features = ["rt-multi-thread", "sync", "time"], optional = true }

# Logging
tracing = { version = "0.1", default-features = false }

# Rate limiting data structures
dashmap = { version = "5.5", optional = true }

# SGX dependencies (conditional)
sgx_tstd = { version = "1.1", optional = true }
sgx_types = { version = "1.1", optional = true }
sgx_tcrypto = { version = "1.1", optional = true }

# Hex encoding
hex = { version = "0.4", default-features = false, features = ["alloc"] }

# Zeroize for secure memory
zeroize = { version = "1.7", features = ["derive"] }

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
tokio-test = "0.4"

[[bench]]
name = "shield_benchmarks"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false
